--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Iggy - Web3 Social" />
         <meta name="author" content="" />
         <title>Iggy Social - Coming Soon</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.jpg" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -15,6 +15,20 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <meta property="og:title" content="Iggy Social" />
+        <meta property="og:description" content="Bringing Web3 Social to life." />
+        <meta property="og:url" content="https://iggy.social" />
+        <meta property="og:image" content="https://iggy.social/assets/img/cover2.png" />
+        <meta property="og:site_name" content="Iggy Social" />
+        <meta property="og:type" content="website" />
+
+        <meta name="twitter:card" content="summary_large_image"/>
+        <meta name="twitter:title" content="Iggy Social"/>
+        <meta name="twitter:description" content="Bringing Web3 Social to life."/>
+        <meta name="twitter:site" content="@iggysocial"/>
+        <meta name="twitter:image" content="https://iggy.social/assets/img/cover2.png"/>
+        <meta name="twitter:creator" content="@iggysocial"/>
     </head>
 
     <body>
