call for early access testers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="lh-1 mb-4 fs-1 h1">iggy social</p>
 
                     <p class="mb-5">Web3 Social on Aurora. Coming soon!</p>
-                    <p class="mb-1">Stay tuned...</p>
+                    <small class="mb-1">DM us on Twitter for early beta access.</small>
                 </div>
             </div>
         </div>
