Plug & Play Web3 Social

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Iggy - Web3 Social" />
         <meta name="author" content="" />
-        <title>Iggy Social - Coming Soon</title>
+        <title>Iggy - Plug & Play Web3 Social</title>
         <link rel="icon" type="image/x-icon" href="/assets/favicon.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
 
-        <meta property="og:title" content="Iggy Social" />
+        <meta property="og:title" content="Iggy - Plug & Play Web3 Social" />
         <meta property="og:description" content="Bringing Web3 Social to life." />
         <meta property="og:url" content="https://iggy.social" />
         <meta property="og:image" content="https://iggy.social/assets/img/cover2.png" />
@@ -24,7 +24,7 @@
         <meta property="og:type" content="website" />
 
         <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:title" content="Iggy Social"/>
+        <meta name="twitter:title" content="Iggy - Plug & Play Web3 Social"/>
         <meta name="twitter:description" content="Bringing Web3 Social to life."/>
         <meta name="twitter:site" content="@iggysocial"/>
         <meta name="twitter:image" content="https://iggy.social/assets/img/cover2.png"/>
@@ -38,7 +38,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <p class="lh-1 mb-4 fs-1 h1">iggy social</p>
 
-                    <p class="mb-5">Web3 Social on Aurora. Coming soon!</p>
+                    <p class="mb-5">Plug & Play Web3 Social. Coming soon!</p>
                     <small class="mb-1">DM us on Twitter for early beta access.</small>
                 </div>
             </div>
