new iggy logo and colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Iggy - Web3 Social" />
         <meta name="author" content="" />
         <title>Iggy - Plug & Play Web3 Social</title>
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.jpg" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -36,7 +36,13 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <p class="lh-1 mb-4 fs-1 h1">iggy social</p>
+                    <div class="row">
+                        <div class="col-3">
+                            <img class="img-fluid" src="/assets/img/iggy.svg" />
+                        </div>
+                    </div>
+
+                    <p class="lh-1 mb-4 fs-1 h1">IGGY SOCIAL</p>
 
                     <p class="mb-5">Plug & Play Web3 Social. Coming soon!</p>
                     <small class="mb-1">DM us on Twitter for early beta access.</small>
