--- a/index.html
+++ b/index.html
@@ -166,7 +166,27 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
+        
+          <p class="mt-3">
+            Social networks have transformed how people communicate and connect with each other, yet it's undeniable that centralization, surveillance, and censorship have plagued the current social media landscape. 
+          </p>
+          <p class="mt-3">
+            That's why there is a growing movement toward decentralization and Web3 Social protocols that aim to put users back in control.
+          </p>
+          <p class="mt-3">
+            The mission of Iggy Social is to enable DAOs and other web3 communities to easily set up their own Web3 Social app. Imagine Iggy Social as a sort of "Wordpress for Web3 Social."
+          </p>
+          <p class="mt-3">
+            With Iggy, you can customize your social space as you want without being limited by centralized control.
+          </p>
+
+          <hr class="mt-3" />
+
+          <p class="mt-3">
+            Iggy is an open-source initiative where anyone is welcome. If you'd like to contribute, reach out via 
+            <a href="https://github.com/orgs/iggy-social/discussions/1" target="_blank">GitHub Discussions</a> or 
+            <a href="https://discord.gg/8dSrwrAQeu" target="_blank">Discord</a>.
+          </p>
         </div>
 
       </div>
@@ -178,7 +198,7 @@
   
           <div class="section-header">
             <h2>Portfolio</h2>
-            <p>Quam sed id excepturi ccusantium dolorem ut quis dolores nisi llum nostrum enim velit qui ut et autem uia reprehenderit sunt deleniti</p>
+            <p>Here are just some of the projects that we helped set up or where our technology was used.</p>
           </div>
   
           <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
@@ -196,60 +216,54 @@
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/sgb-chat.png" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/sgb-chat.png" class="img-fluid" alt=""></a>
+                  <a href="assets/img/portfolio/sgb-chat.png" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/sgb-chat.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="portfolio-details.html" title="More Details">SGB Chat</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/product-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/punk.png" class="img-fluid" alt=""></a>
+                  <a href="assets/img/portfolio/product-1.jpg" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/punk.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="portfolio-details.html" title="More Details">Punk Domains</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/opti-social.png" class="img-fluid" alt=""></a>
+                  <a href="assets/img/portfolio/branding-1.jpg" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/opti-social.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="portfolio-details.html" title="More Details">Opti Social</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/books-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/smol.png" class="img-fluid" alt=""></a>
+                  <a href="https://names.pooly.me/" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/pool.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="portfolio-details.html" title="More Details">Smol Domains</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
+                    <h4><a href="portfolio-details.html" title="More Details">PoolTogether Names</a></h4>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/app-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/send2name.png" class="img-fluid" alt=""></a>
+                  <a href="assets/img/portfolio/app-2.jpg" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/send2name.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="portfolio-details.html" title="More Details">Send2.name</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="assets/img/portfolio/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/quake.png" class="img-fluid" alt=""></a>
+                  <a href="assets/img/portfolio/product-2.jpg" target="_blank" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/quake.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="portfolio-details.html" title="More Details">Quake Chat</a></h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -267,7 +281,7 @@
 
         <div class="section-header">
             <h2>Trusted by</h2>
-            <p>DAOs and web3 communities who use products developed by us.</p>
+            <p>DAOs and web3 communities that use products developed by us.</p>
         </div>
 
         <div class="clients-slider swiper">
@@ -279,7 +293,6 @@
             <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
           </div>
         </div>
 
@@ -292,7 +305,6 @@
 
         <div class="section-header">
           <h2>Our Services</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
         </div>
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
@@ -300,10 +312,10 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="bi bi-activity"></i>
+                <i class="bi bi-laptop"></i>
               </div>
-              <h3>Nesciunt Mete</h3>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <h3>Development</h3>
+              <p>Build a custom web3 social dapp for your community with personalized features such as DeFi, NFTs, DAO governance, and other integrations.</p>
               <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -311,10 +323,10 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-broadcast"></i>
+                <i class="bi bi-bank"></i>
               </div>
-              <h3>Eosle Commodi</h3>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <h3>Tokenomics</h3>
+              <p>We help your community find multiple revenue streams for the treasury, while boosting engagement within your decentralized chat.</p>
               <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -324,41 +336,8 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <h3>Ledo Markt</h3>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-bounding-box-circles"></i>
-              </div>
-              <h3>Asperiores Commodit</h3>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-calendar4-week"></i>
-              </div>
-              <h3>Velit Doloremque</h3>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-chat-square-text"></i>
-              </div>
-              <h3>Dolori Architecto</h3>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+              <h3>Advisory</h3>
+              <p>With our expertise, we can provide guidance on creating a roadmap to grow daily active users, ensuring the long-term sustainability of your dApp.</p>
               <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -593,85 +572,6 @@
 
       </div>
     </section><!-- End Frequently Asked Questions Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>Contact</h2>
-          <p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem dolore earum</p>
-        </div>
-
-        <div class="row gx-lg-0 gy-4">
-
-          <div class="col-lg-4">
-
-            <div class="info-container d-flex flex-column align-items-center justify-content-center">
-              <div class="info-item d-flex">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h4>Email:</h4>
-                  <p>info@example.com</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex">
-                <i class="bi bi-phone flex-shrink-0"></i>
-                <div>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 55</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex">
-                <i class="bi bi-clock flex-shrink-0"></i>
-                <div>
-                  <h4>Open Hours:</h4>
-                  <p>Mon-Sat: 11AM - 23PM</p>
-                </div>
-              </div><!-- End Info Item -->
-            </div>
-
-          </div>
-
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="7" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div><!-- End Contact Form -->
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
