metadata & images updated

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <meta property="og:title" content="Iggy - Plug & Play Web3 Social" />
-  <meta property="og:description" content="Bringing Web3 Social to life." />
+  <meta property="og:description" content="Bringing Web3 Social to life with open source tools for DAOs and web3 communities." />
   <meta property="og:url" content="https://iggy.social" />
-  <meta property="og:image" content="https://iggy.social/assets/img/preview.png" />
+  <meta property="og:image" content="https://iggy.social/assets/img/preview.jpg" />
   <meta property="og:site_name" content="Iggy Social" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Iggy - Plug & Play Web3 Social"/>
-  <meta name="twitter:description" content="Bringing Web3 Social to life."/>
+  <meta name="twitter:description" content="Bringing Web3 Social to life with open source tools for DAOs and web3 communities."/>
   <meta name="twitter:site" content="@iggysocial"/>
-  <meta name="twitter:image" content="https://iggy.social/assets/img/preview.png"/>
+  <meta name="twitter:image" content="https://iggy.social/assets/img/preview.jpg"/>
   <meta name="twitter:creator" content="@iggysocial"/>
 
   <!-- =======================================================
