Base Dapps List and zkSync Dapps List added

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                 </div>
               </div><!-- End Portfolio Item -->
   
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
-                  <a href="https://quake.chat/" target="_blank"><img src="assets/img/portfolio/quake.png" class="img-fluid" alt=""></a>
+                  <a href="https://base.dappslist.net/" target="_blank"><img src="https://base.dappslist.net/cover.jpg" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://quake.chat/" target="_blank" title="More Details">Quake Chat</a></h4>
+                    <h4><a href="https://base.dappslist.net/" target="_blank" title="More Details">Base Dapps List</a></h4>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -255,6 +255,15 @@
                   <a href="https://id.zkchat.net/" target="_blank"><img src="assets/img/portfolio/zksoul.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://id.zkchat.net/" target="_blank" title="More Details">zkSoul ID</a></h4>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
+                <div class="portfolio-wrap">
+                  <a href="https://zksync.dappslist.net/" target="_blank"><img src="https://zksync.dappslist.net/cover.jpg" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://zksync.dappslist.net/" target="_blank" title="More Details">zkSync Dapps List</a></h4>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -300,6 +309,15 @@
                   <a href="https://fantom.names/" target="_blank"><img src="assets/img/portfolio/fantom-names.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://fantom.names/" target="_blank" title="More Details">Fantom Names</a></h4>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://quake.chat/" target="_blank"><img src="assets/img/portfolio/quake.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://quake.chat/" target="_blank" title="More Details">Quake Chat</a></h4>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
