--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <meta property="og:title" content="Iggy - Plug & Play Web3 Social" />
+  <meta property="og:title" content="Iggy - Web3 Social Tools for DAOs" />
   <meta property="og:description" content="Bringing Web3 Social to life with open source tools for DAOs and web3 communities." />
   <meta property="og:url" content="https://iggy.social" />
   <meta property="og:image" content="https://iggy.social/assets/img/preview.jpg" />
@@ -36,7 +36,7 @@
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Iggy - Plug & Play Web3 Social"/>
+  <meta name="twitter:title" content="Iggy - Web3 Social Tools for DAOs"/>
   <meta name="twitter:description" content="Bringing Web3 Social to life with open source tools for DAOs and web3 communities."/>
   <meta name="twitter:site" content="@iggysocial"/>
   <meta name="twitter:image" content="https://iggy.social/assets/img/preview.jpg"/>
@@ -91,7 +91,7 @@
           <p>Easily set up a decentralized social network for your DAO or web3 community.</p>
 
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started">Learn More</a>
+            <a href="#reach-out" class="btn-get-started">Reach out to us</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
@@ -195,12 +195,13 @@
             </div>
   
             <div class="row gy-4 portfolio-container">
-  
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
-                  <a href="https://sgb.chat/" target="_blank"><img src="assets/img/portfolio/sgb-chat.png" class="img-fluid" alt=""></a>
+                  <a href="https://flr.chat/" target="_blank"><img src="https://flr.chat/img/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://sgb.chat/" target="_blank" title="More Details">SGB Chat</a></h4>
+                    <h4><a href="https://flr.chat/" target="_blank" title="More Details">FLR Chat</a></h4>
+                    <small>Decentralized web3 social network on Flare.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -210,6 +211,7 @@
                   <a href="https://punk.domains/" target="_blank"><img src="assets/img/portfolio/punk.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://punk.domains/" target="_blank" title="More Details">Punk Domains</a></h4>
+                    <small>Modular web3 domain name protocol.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -219,6 +221,7 @@
                   <a href="https://basebook.xyz/" target="_blank"><img src="assets/img/portfolio/basebook.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://basebook.xyz/" target="_blank" title="More Details">Basebook</a></h4>
+                    <small>Social NFT launchpad on Base.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -228,6 +231,7 @@
                   <a href="https://names.pooly.me/" target="_blank"><img src="assets/img/portfolio/pool.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://names.pooly.me/" target="_blank" title="More Details">PoolTogether Names</a></h4>
+                    <small>.pool name extension for the PoolTogether community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -237,6 +241,7 @@
                   <a href="https://send2.name/" target="_blank"><img src="assets/img/portfolio/send2name.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://send2.name/" target="_blank" title="More Details">Send2.name</a></h4>
+                    <small>Send tokens to any web3 domain name instead of a long address.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -246,6 +251,7 @@
                   <a href="https://base.dappslist.net/" target="_blank"><img src="https://base.dappslist.net/cover.jpg" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://base.dappslist.net/" target="_blank" title="More Details">Base Dapps List</a></h4>
+                    <small>Curated list of already-live dApps on the Base blockchain.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -255,6 +261,7 @@
                   <a href="https://id.zkchat.net/" target="_blank"><img src="assets/img/portfolio/zksoul.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://id.zkchat.net/" target="_blank" title="More Details">zkSoul ID</a></h4>
+                    <small>Soulbound identity on zkSync.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -264,6 +271,17 @@
                   <a href="https://zksync.dappslist.net/" target="_blank"><img src="https://zksync.dappslist.net/cover.jpg" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://zksync.dappslist.net/" target="_blank" title="More Details">zkSync Dapps List</a></h4>
+                    <small>Curated list of already-live dApps on the zkSync.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://sgb.chat/" target="_blank"><img src="assets/img/portfolio/sgb-chat.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://sgb.chat/" target="_blank" title="More Details">SGB Chat</a></h4>
+                    <small>Decentralized web3 social network on Songbird.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -273,6 +291,7 @@
                   <a href="https://giveth.punk.domains/" target="_blank"><img src="assets/img/portfolio/giveth.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://giveth.punk.domains/" target="_blank" title="More Details">Giveth Names</a></h4>
+                    <small>.giveth domain name extension for the Giveth community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -282,6 +301,7 @@
                   <a href="https://flr.domains/" target="_blank"><img src="assets/img/portfolio/flr-domains.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://flr.domains/" target="_blank" title="More Details">Flare Domains</a></h4>
+                    <small>.flr domain name extension for the Flare community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -291,6 +311,7 @@
                   <a href="https://optimistic.domains/" target="_blank"><img src="assets/img/portfolio/op.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://optimistic.domains/" target="_blank" title="More Details">Optimistic Domains</a></h4>
+                    <small>.op domain name extension for the Optimism community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -300,6 +321,7 @@
                   <a href="https://songbird.info/" target="_blank"><img src="assets/img/portfolio/songbird-info.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://songbird.info/" target="_blank" title="More Details">Songbird Info</a></h4>
+                    <small>Curated list of already-live dApps on the Songbird blockchain.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -309,15 +331,7 @@
                   <a href="https://fantom.names/" target="_blank"><img src="assets/img/portfolio/fantom-names.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://fantom.names/" target="_blank" title="More Details">Fantom Names</a></h4>
-                  </div>
-                </div>
-              </div><!-- End Portfolio Item -->
-
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
-                <div class="portfolio-wrap">
-                  <a href="https://quake.chat/" target="_blank"><img src="assets/img/portfolio/quake.png" class="img-fluid" alt=""></a>
-                  <div class="portfolio-info">
-                    <h4><a href="https://quake.chat/" target="_blank" title="More Details">Quake Chat</a></h4>
+                    <small>.fantom domain name extension for the Fantom community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -327,6 +341,7 @@
                   <a href="https://distributor.iggy.social/" target="_blank"><img src="assets/img/portfolio/distributor.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://distributor.iggy.social/" target="_blank" title="More Details">Revenue Distributor</a></h4>
+                    <small>Revenue distribution tool for web3 communities.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -570,7 +585,7 @@
                 </div>
               </div><!-- # Faq item-->
 
-              <div class="accordion-item">
+              <div class="accordion-item" id="reach-out">
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                     <span class="num">2.</span>
@@ -603,16 +618,17 @@
 
               <div class="accordion-item">
                 <h3 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
                     <span class="num">4.</span>
                     How can I reach out if I have more questions?
                   </button>
                 </h3>
-                <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                <div id="faq-content-4" class="accordion-collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    You can reach out to us via email at <a href="mailto:info@iggy.social" target="_blank">info@iggy.social</a> or you 
-                    can send a DM directly to Tekr on <a href="https://t.me/tekr0x" target="_blank">Telegram</a> or 
-                    <a href="https://twitter.com/tekr0x" target="_blank">Twitter</a>. We are happy to answer any of your questions. 
+                    You can send a DM directly to Tekr on <a href="https://t.me/tekr0x" target="_blank">Telegram</a> or 
+                    <a href="https://twitter.com/tekr0x" target="_blank">Twitter</a>. Or reach out to us via  
+                    <a href="https://discord.gg/8dSrwrAQeu" target="_blank">our Discord</a>. 
+                    We are happy to answer any of your questions. 
                   </div>
                 </div>
               </div><!-- # Faq item-->
