--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="#hero">Home</a></li>
+          <li><a href="https://paragraph.xyz/@iggy" target="_blank">Blog</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#clients">Trusted by</a></li>
@@ -196,7 +197,7 @@
   
             <div class="row gy-4 portfolio-container">
 
-              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
                   <a href="https://flr.chat/" target="_blank"><img src="https://flr.chat/img/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
@@ -336,12 +337,22 @@
                 </div>
               </div><!-- End Portfolio Item -->
 
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
                   <a href="https://distributor.iggy.social/" target="_blank"><img src="assets/img/portfolio/distributor.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://distributor.iggy.social/" target="_blank" title="More Details">Revenue Distributor</a></h4>
                     <small>Revenue distribution tool for web3 communities.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://chat.basepunk.xyz/" target="_blank"><img src="https://chat.basepunk.xyz/img/cover.jpg" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://chat.basepunk.xyz/" target="_blank" title="More Details">BasePunk Chat</a></h4>
+                    <small>Web3 Social app for the BasePunk NFT Community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -665,6 +676,7 @@
           <h4>Navigation</h4>
           <ul>
             <li><a href="#hero">Home</a></li>
+            <li><a href="https://paragraph.xyz/@iggy" target="_blank">Blog</a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#clients">Clients</a></li>
