Based Names added

--- a/index.html
+++ b/index.html
@@ -356,6 +356,16 @@
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://basednames.xyz/" target="_blank"><img src="https://basednames.xyz/assets/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://basednames.xyz/" target="_blank" title="More Details">Based Names</a></h4>
+                    <small>Web3 names and digital identity for the Based DAO community.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
   
             </div><!-- End Portfolio Container -->
   
