fairchat, mirror, and paragraph added

--- a/index.html
+++ b/index.html
@@ -371,8 +371,18 @@
                 <div class="portfolio-wrap">
                   <a href="https://alwaysliquid.com/" target="_blank"><img src="https://alwaysliquid.com/img/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://alwaysliquid.com/" target="_blank" title="More Details">AlwaysLiquid.com</a></h4>
+                    <h4><a href="https://alwaysliquid.com/" target="_blank" title="More Details">AlwaysLiquid</a></h4>
                     <small>Social NFT marketplace where NFTs are always liquid.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://fairchat.xyz/" target="_blank"><img src="https://fairchat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://fairchat.xyz/" target="_blank" title="More Details">Fairchat</a></h4>
+                    <small>A decentralized social network on the ZKFair rollup.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -689,6 +699,8 @@
             <a href="https://t.me/tekr0x" class="telegram"><i class="bi bi-telegram"></i></a>
             <a href="https://discord.gg/8dSrwrAQeu" class="discord"><i class="bi bi-discord"></i></a>
             <a href="https://github.com/iggy-social" class="github"><i class="bi bi-github"></i></a>
+            <a href="https://mirror.xyz/0xFE3D2c97235B76EA2072949E2c25A8C6EF95aE51" class="newspaper"><i class="bi bi-newspaper"></i></a>
+            <a href="https://paragraph.xyz/@iggy" class="paragraph"><i class="bi bi-paragraph"></i></a>
           </div>
         </div>
 
