--- a/index.html
+++ b/index.html
@@ -349,6 +349,16 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
+                  <a href="https://tko.chat/" target="_blank"><img src="https://tko.chat/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://tko.chat/" target="_blank" title="More Details">TKO Chat</a></h4>
+                    <small>A decentralized social network on the Taiko network.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
                   <a href="https://chat.basepunk.xyz/" target="_blank"><img src="https://chat.basepunk.xyz/img/cover.jpg" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://chat.basepunk.xyz/" target="_blank" title="More Details">BasePunk Chat</a></h4>
