new revenue distributor preview image

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
-                  <a href="https://distributor.iggy.social/" target="_blank"><img src="assets/img/portfolio/distributor.png" class="img-fluid" alt=""></a>
+                  <a href="https://distributor.iggy.social/" target="_blank"><img src="https://distributor.iggy.social/preview.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://distributor.iggy.social/" target="_blank" title="More Details">Revenue Distributor</a></h4>
                     <small>Revenue distribution tool for web3 communities.</small>
