new projects added, order reshuffle

--- a/index.html
+++ b/index.html
@@ -246,6 +246,16 @@
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://fairchat.xyz/" target="_blank"><img src="https://fairchat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://fairchat.xyz/" target="_blank" title="More Details">Fairchat</a></h4>
+                    <small>A decentralized social network on the ZKFair rollup.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
   
               <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
@@ -253,6 +263,26 @@
                   <div class="portfolio-info">
                     <h4><a href="https://base.dappslist.net/" target="_blank" title="More Details">Base Dapps List</a></h4>
                     <small>Curated list of already-live dApps on the Base blockchain.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
+                <div class="portfolio-wrap">
+                  <a href="https://flr.domains/" target="_blank"><img src="assets/img/portfolio/flr-domains.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://flr.domains/" target="_blank" title="More Details">Flare Domains</a></h4>
+                    <small>.flr domain name extension for the Flare community.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://tko.chat/" target="_blank"><img src="https://tko.chat/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://tko.chat/" target="_blank" title="More Details">TKO Chat</a></h4>
+                    <small>A decentralized social network on the Taiko network.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -299,16 +329,6 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="https://flr.domains/" target="_blank"><img src="assets/img/portfolio/flr-domains.png" class="img-fluid" alt=""></a>
-                  <div class="portfolio-info">
-                    <h4><a href="https://flr.domains/" target="_blank" title="More Details">Flare Domains</a></h4>
-                    <small>.flr domain name extension for the Flare community.</small>
-                  </div>
-                </div>
-              </div><!-- End Portfolio Item -->
-
-              <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
-                <div class="portfolio-wrap">
                   <a href="https://optimistic.domains/" target="_blank"><img src="assets/img/portfolio/op.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
                     <h4><a href="https://optimistic.domains/" target="_blank" title="More Details">Optimistic Domains</a></h4>
@@ -329,9 +349,9 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="https://fantom.names/" target="_blank"><img src="assets/img/portfolio/fantom-names.png" class="img-fluid" alt=""></a>
+                  <a href="https://fantomname.org/" target="_blank"><img src="https://fantomname.org/assets/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://fantom.names/" target="_blank" title="More Details">Fantom Names</a></h4>
+                    <h4><a href="https://fantomname.org/" target="_blank" title="More Details">FantomName.org</a></h4>
                     <small>.fantom domain name extension for the Fantom community.</small>
                   </div>
                 </div>
@@ -349,10 +369,10 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="https://tko.chat/" target="_blank"><img src="https://tko.chat/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <a href="https://modechat.xyz/" target="_blank"><img src="https://modechat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://tko.chat/" target="_blank" title="More Details">TKO Chat</a></h4>
-                    <small>A decentralized social network on the Taiko network.</small>
+                    <h4><a href="https://modechat.xyz/" target="_blank" title="More Details">Modechat</a></h4>
+                    <small>The first decentralized social network/chat on Mode Network.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -367,7 +387,7 @@
                 </div>
               </div><!-- End Portfolio Item -->
 
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
                   <a href="https://basednames.xyz/" target="_blank"><img src="https://basednames.xyz/assets/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
@@ -389,10 +409,20 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="https://fairchat.xyz/" target="_blank"><img src="https://fairchat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <a href="https://blastchat.xyz/" target="_blank"><img src="https://blastchat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://fairchat.xyz/" target="_blank" title="More Details">Fairchat</a></h4>
-                    <small>A decentralized social network on the ZKFair rollup.</small>
+                    <h4><a href="https://blastchat.xyz/" target="_blank" title="More Details">Blast Chat</a></h4>
+                    <small>A decentralized social network on the Blast L2 chain.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
+                <div class="portfolio-wrap">
+                  <a href="https://sns.scrolly.xyz/" target="_blank"><img src="https://sns.scrolly.xyz/assets/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://sns.scrolly.xyz/" target="_blank" title="More Details">Scrolly Names</a></h4>
+                    <small>Scrolly Name Service for the Scrolly token & NFT community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
