scrolly hub added

--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="https://fantomname.org/" target="_blank"><img src="https://fantomname.org/assets/cover.png" class="img-fluid" alt=""></a>
+                  <a href="https://sns.scrolly.xyz/" target="_blank"><img src="https://sns.scrolly.xyz/assets/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://fantomname.org/" target="_blank" title="More Details">FantomName.org</a></h4>
-                    <small>.fantom domain name extension for the Fantom community.</small>
+                    <h4><a href="https://sns.scrolly.xyz/" target="_blank" title="More Details">Scrolly Names</a></h4>
+                    <small>Scrolly Name Service for the Scrolly token & NFT community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -419,13 +419,24 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
                 <div class="portfolio-wrap">
-                  <a href="https://sns.scrolly.xyz/" target="_blank"><img src="https://sns.scrolly.xyz/assets/cover.png" class="img-fluid" alt=""></a>
+                  <a href="https://fantomname.org/" target="_blank"><img src="https://fantomname.org/assets/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://sns.scrolly.xyz/" target="_blank" title="More Details">Scrolly Names</a></h4>
-                    <small>Scrolly Name Service for the Scrolly token & NFT community.</small>
+                    <h4><a href="https://fantomname.org/" target="_blank" title="More Details">FantomName.org</a></h4>
+                    <small>.fantom domain name extension for the Fantom community.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+                <div class="portfolio-wrap">
+                  <a href="https://hub.scrolly.xyz/" target="_blank"><img src="https://hub.scrolly.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://hub.scrolly.xyz/" target="_blank" title="More Details">Scrolly Hub</a></h4>
+                    <small>Web3 hub and chat for the Scrolly memecoin community.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
   
             </div><!-- End Portfolio Container -->
   
