--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
 
               <div class="col-xl-4 col-md-6 portfolio-item filter-social">
                 <div class="portfolio-wrap">
-                  <a href="https://blastchat.xyz/" target="_blank"><img src="https://blastchat.xyz/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <a href="https://nftdegen.lol/" target="_blank"><img src="https://nftdegen.lol/img/covers/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
-                    <h4><a href="https://blastchat.xyz/" target="_blank" title="More Details">Blast Chat</a></h4>
-                    <small>A decentralized social network on the Blast L2 chain.</small>
+                    <h4><a href="https://nftdegen.lol/" target="_blank" title="More Details">NFTdegen</a></h4>
+                    <small>The first NFT launchpad and marketplace on the Degen Chain.</small>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
