add Degen Radio, Meow Domains, and Degen Dapps

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
               </div><!-- End Portfolio Item -->
   
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
                   <a href="https://basebook.xyz/" target="_blank"><img src="assets/img/portfolio/basebook.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
@@ -397,7 +397,7 @@
                 </div>
               </div><!-- End Portfolio Item -->
 
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
                   <a href="https://alwaysliquid.com/" target="_blank"><img src="https://alwaysliquid.com/img/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
@@ -407,7 +407,7 @@
                 </div>
               </div><!-- End Portfolio Item -->
 
-              <div class="col-xl-4 col-md-6 portfolio-item filter-social">
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
                 <div class="portfolio-wrap">
                   <a href="https://nftdegen.lol/" target="_blank"><img src="https://nftdegen.lol/img/covers/cover.png" class="img-fluid" alt=""></a>
                   <div class="portfolio-info">
@@ -437,6 +437,35 @@
                 </div>
               </div><!-- End Portfolio Item -->
 
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
+                <div class="portfolio-wrap">
+                  <a href="https://degenradio.lol/" target="_blank"><img src="https://degenradio.lol/img/covers/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://degenradio.lol/" target="_blank" title="More Details">Degen Radio</a></h4>
+                    <small>Stream music NFTs and create onchain playlists.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-domains">
+                <div class="portfolio-wrap">
+                  <a href="https://meow.domains/" target="_blank"><img src="https://meow.domains/assets/cover.png" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://meow.domains/" target="_blank" title="More Details">Meow Domains</a></h4>
+                    <small>Name service for the Superposition community.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+
+              <div class="col-xl-4 col-md-6 portfolio-item filter-other">
+                <div class="portfolio-wrap">
+                  <a href="https://degendapps.lol/" target="_blank"><img src="https://degendapps.lol/cover.jpg" class="img-fluid" alt=""></a>
+                  <div class="portfolio-info">
+                    <h4><a href="https://degendapps.lol/" target="_blank" title="More Details">Degen Dapps</a></h4>
+                    <small>Curated list of live dApps on Degen Chain.</small>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
   
             </div><!-- End Portfolio Container -->
   
